--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -4,4 +4,16 @@
 
 <h1>Add Stock</h1>
 
+<div class="my-4">
+    <form action="{% url 'add_stock' %}" class="form-inline my-2 my-lg-0" method="POST">
+        {% csrf_token %}
+        <input class="form-control mr-sm-2" type="search" placeholder="Add to Portfolio" name="ticker" aria-label="Search">
+        <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Add Ticker</button>
+    </form>
+</div>
+
+{% for item in ticker %}
+<div class="row">{{item}}</div>
+{% endfor %}
+
 {% endblock %}
