--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 {% extends 'base.html' %}
 
 {% block content %}
@@ -7,13 +8,39 @@
 <div class="my-4">
     <form action="{% url 'add_stock' %}" class="form-inline my-2 my-lg-0" method="POST">
         {% csrf_token %}
-        <input class="form-control mr-sm-2" type="search" placeholder="Add to Portfolio" name="ticker" aria-label="Search">
+        <input class="form-control mr-sm-2" type="search" placeholder="Add to Portfolio" name="ticker"
+               aria-label="Search">
         <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Add Ticker</button>
     </form>
 </div>
 
-{% for item in ticker %}
-<div class="row">{{item}}</div>
-{% endfor %}
+<table class="table table-striped table-bordered table-hover mt-5">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">Symbol</th>
+        <th scope="col">Company Name</th>
+        <th scope="col">Stock Price</th>
+        <th scope="col">Previous Close</th>
+        <th scope="col">Market Cap</th>
+        <th scope="col">YTD Change</th>
+        <th scope="col">52 Week High</th>
+        <th scope="col">52 Week Low</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for item in tickers %}
+    <tr>
+        <td scope="row">{{item.symbol}}</td>
+        <td>{{item.companyName}}</td>
+        <td>${{item.latestPrice}}</td>
+        <td>${{item.previousClose}}</td>
+        <td>${{item.marketCap}}</td>
+        <td>{{item.ytdChange}}%</td>
+        <td>${{item.week52High}}</td>
+        <td>${{item.week52Low}}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
 
 {% endblock %}
