--- a/stocks/quotes/templates/base.html
+++ b/stocks/quotes/templates/base.html
@@ -28,18 +28,32 @@
                 <a class="nav-link" href="{% url 'add_stock' %}">Add Stock</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'delete_stock' %}">Delete Stock</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/admin">Admin</a>
             </li>
         </ul>
         <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST">
             {% csrf_token %}
-            <input class="form-control mr-sm-2" type="search" placeholder="Get Stock Quote" name="ticker" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Get Stock Quote" name="ticker"
+                   aria-label="Search">
             <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search Quotes</button>
         </form>
     </div>
 </nav>
 
 <div class="container mt-3">
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{message}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
     {% block content %}
     {% endblock %}
 </div>
